style.css
body{
    display: flex;
    flex-direction: column;
    font-family: 'Roboto', sans-serif;
    margin: 0;
}

a{
    text-decoration: none;
}

ul{
    list-style-type: none;
}

.topo{
    background-color: #1F2937;
    color: white;
}

header>h1{
    padding: 0;
    margin: 0;
    font-size: 24px;
    font-weight: 900;
    color: #F9FAF8;
}

.header-container{
    display: flex;
    justify-content: center;
    align-items: center;
}

header{
    max-width: 900px;
    flex: 1;
    padding: 20px;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.links > ul{
    display: flex;
    gap: 15px;
    padding: 0;
    margin: 0;
}

.links>ul>li>a{
    color: #E5E7EB;
    font-size: 18px;
}

.links>ul>li>a:hover{
    color: #ff6219;
}

.another-awesome-container{
    margin-top: 75px;
    margin-bottom: 75px;
    display: flex;
    justify-content: center;
    flex: 1;

}

.awesome-container{
    flex-wrap: wrap;
    display: flex;
    justify-content: space-around;
    align-items: center;
    max-width: 900px;
    gap: 20px;
    padding: 20px;
}

.awesome{
    max-width: 450px;
}

.awesome>h1{
    color: #F9FAF8;
    font-size: 48px;
    font-weight: 1000;
    padding: 0;
    margin: 0;
    line-height: 40px;
}

.awesome>p{
    color: #E5E7EB;
    font-size: 18px;
    padding: 0;
    margin: 0;
    margin-top: 8px;
}

.awesome>button{
    background-color: #3882f6;
    padding: 5px 30px;
    color: #E5E7EB;
    font-family: 'Roboto';
    font-size: 18px;
    font-weight: 600;
    border: none;
    border-radius: 8px;
    text-align: center;
    text-decoration: none;
    margin-top: 10px;
}

.awesome>button:hover{
    background-color: #ff6219;
}

.placeholder{
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: gray;
    height: 225px;
    min-width: 400px;
    max-width: 500px;
    flex: 1;
}

/* info daqui pra baixo */

.random-info{
    text-align: center;
    margin-top: 30px;
}

.info-container{
    display: flex;
    justify-content: center;

}

.info{
    display: flex;
    justify-content: space-around;
    max-width: 900px;
    gap: 25px;
    margin-bottom: 50px;
    margin-top: 20px;
    flex-wrap: wrap;
}

.info-square{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    text-align: center;
    width: 150px;
}

.square{
    width: 125px;
    height: 125px;
    border: 2px solid #3882f6;
    border-radius: 15px;
}

.square:hover{
    border-color: #ff6219 ;
}

.info-square>p{
    margin-top: 8px;
    font-weight: 300;
    font-size: 15px;
}

/* quote daqui pra baixo */

.quote-container{
    background-color: #E5E7EB;
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 80px 20px;
}

.quote{
    max-width: 570px;
    font-size: 26px;
    font-weight: 300;
    font-style: italic;
    color: #1F2937;
    display: flex;
    flex-direction: column;
    margin-bottom: 0;
}
.quotation-container{
    display: flex;
    justify-content: flex-end;
    margin-right: 30px;
    margin-top: -30px;
}

.quotation{
    font-size: 16px;
    font-weight: 900;
    font-style: normal;
    color: #1F2937;
} 
/* call to action */

.call-container{
    display: flex;
    justify-content: center;
    align-items: center;
}

.call-to-action{
    margin-top: 50px;
    margin-bottom: 50px;
    box-sizing: border-box;
    display: flex;
    justify-content: space-around;
    align-items: center;
    padding: 35px 50px;
    background-color: #3882f6;    
    border-radius: 5px;
    width: 800px;
    margin: 90px 20px;

}
.text{
    color: #E5E7EB;
    font-weight: 400;
    font-size: 15px;
}

p.sign{
    margin: 0;
    padding: 0;
}

p.call{
    font-weight: 800;
    font-size: 22px;
    margin: 0;
    padding: 0;
}

.call-to-action>button{
    background-color: #3882f6;
    border: 2px solid #E5E7EB;
    border-radius: 5px;
    display: flex;
    justify-content: center;
    align-items: center;
    margin: 0;
    width: 100px;
    height: 28px;
    color: #E5E7EB;
    font-weight: 800;
}

.call-to-action>button:hover{
    background-color: #ff6219;
}


/* footer */

footer{
    display: flex;
    align-items: center;
    justify-content: center;
    background-color: #1F2937;
    color: #E5E7EB;
    padding: 25px 0;
}

